# sterling

./: .env  .gitignore  COMPARISON.md  COMPLETE_USAGE_GUIDE.md  DEPLOYMENT_GUIDE.md  LICENSE  PRODUCTION_CHECKLIST.md  README.md  README.md.backup  STERLING_SETUP_README.md  build.zig  build.zig.zon  enhanced-cli-flags.patch  fix-llm-enhancement.patch  github-actions-fix.yaml  plan.md  setup-chelsea-automation.sh  sterling-metrics-test  sterling-test  sterling.toml  sync-vers-docs.sh  temp_main_part1.zig  test-openapi.yaml  test-zig-config.toml  test_config.toml  test_go_config.toml  test_python_config.toml  updated-chelsea-config.toml  updated-sync-vers-docs.sh  vers.toml  webhook-server.sh
chelsea/: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.agent  Makefile  README.md  api.sh  commands.sh  flake.nix  public-api.sh  rust-toolchain.toml
chelsea/.config/: nextest.toml
chelsea/.github/workflows/: cargo-lock-check.yaml  ci.yaml  claude-code-review.yaml  deploy-llm-proxy.yaml  merge-queue-fmt.yaml  release-production.yaml  release-staging.yaml  sync-openapi-to-docs.yaml  upload-openapi-spec.yaml
chelsea/.pi/: session-2026-02-28T05-49-51-2rel.json  session-2026-02-28T05-49-51-2rel.meta.json
chelsea/ceph-test-cluster/: README.md  get-firecracker.sh  get-rootfs-and-setup-disks.sh  start-firecracker.sh  start-vm.sh
chelsea/config/: 500-common.ini  520-chelsea.ini  540-orchestrator.ini  560-proxy.ini  sources.txt
chelsea/crates/agent_protocol/: Cargo.toml
chelsea/crates/alerting/: Cargo.toml  README.md
chelsea/crates/billing/: Cargo.toml
chelsea/crates/boatswain/: Cargo.toml
chelsea/crates/ceph/: Cargo.toml  README.md
chelsea/crates/ceph-gc/: Cargo.toml
chelsea/crates/cephalopod/: Cargo.toml  README.md  build.rs
chelsea/crates/chelsea/: Cargo.toml  Dockerfile  docker-entrypoint.sh
chelsea/crates/chelsea-agent/: Cargo.toml  VSOCK_SECURITY_TESTING.md  vsock-single-node-testing.md
chelsea/crates/chelsea_db/: Cargo.toml
chelsea/crates/chelsea_lib/: Cargo.toml
chelsea/crates/chelsea_server2/: Cargo.toml
chelsea/crates/chelsea_test/: Cargo.toml  README.md
chelsea/crates/chelsea_vmevent_server/: Cargo.toml  README.md
chelsea/crates/dto_lib/: Cargo.toml
chelsea/crates/llm_proxy/: Cargo.toml  Dockerfile  dev.sh  llm_proxy.production.toml  llm_proxy.toml  pi-extension.js
chelsea/crates/lvm/: Cargo.toml
chelsea/crates/mulberry/: Cargo.toml  README.md
chelsea/crates/node_balancer/: Cargo.toml
chelsea/crates/orch_test/: Cargo.toml
chelsea/crates/orch_wg/: Cargo.toml
chelsea/crates/orchestrator/: .gitignore  Cargo.toml  DATABASE.md  README.md  single-node-bootstrap.md
chelsea/crates/proxy/: .dockerignore  Cargo.toml  DEPLOY.md  PROXY_TLS_TESTING.md  README.md  deploy-local.sh  deploy.sh
chelsea/crates/timing_layer/: Cargo.toml  README.md  better_timing_log_writer.rs.example  timing_log_writer.rs.example
chelsea/crates/updater-daemon/: Cargo.toml  README.md
chelsea/crates/util/: Cargo.toml
chelsea/crates/util_test/: Cargo.toml
chelsea/crates/vers_acme/: Cargo.toml  README.md  TESTING.md  test-e2e.sh
chelsea/crates/vers_config/: Cargo.toml  README.md
chelsea/crates/vers_pg/: Cargo.toml
chelsea/crates/vers_s3/: Cargo.toml
chelsea/crates/workspace_build/: Cargo.toml  build.rs
chelsea/doc/: cloud-hypervisor-block-io.md  install_rust_ubuntu.txt  storage-tiering.md
chelsea/kernel/patches/: disable_cmd_fix_perms_1.patch  enable_modules_1.patch  enable_modules_2.patch  enable_prefault_1.patch
chelsea/lib/Chelsea1.0/: apis.eagle  configuration.eagle  database.eagle  fileSystem.eagle  gpg.eagle  json.eagle  legacy.eagle  meta.eagle  network.eagle  pkgIndex.eagle  pool.eagle  shell.eagle  ssh.eagle  temporaryDirectory.eagle  test.eagle  value.eagle  web.eagle  wireGuard.eagle
chelsea/lib/Eagle1.0/: vendor.eagle  vlib.eagle
chelsea/nix/: versPackage.nix
chelsea/nix/firecracker/: default.nix
chelsea/nix/vector/: default.nix  vector.yaml
chelsea/openapi/: openapi.json  openapi.stainless.yaml  openapi.yaml  orchestrator.openapi.json  orchestrator.openapi.yaml
chelsea/pg/: README.md  docker-compose.yml
chelsea/pg/migrations/: 20250821802812_initial_schema.sql  20250908233235_networking.sql  20250924044410_orchestrator.sql  20251014144232_mistakes_by_vt.sql  20251014222252_vm_ipv6_wireguard.sql  20251020163717_update_orch.sql  20251021124825_fix_next_vm_ip_default.sql  20251023075352_remove_clusters.sql  20251107073104_update_oauth_user_profiles.sql  20251111063619_seed_db.sql  20251111153656_fix_dev_to_match_prod.sql  20251113092433_added_col_vm_wg_port.sql  20251119195003_create_web_schema.sql  20251124225103_vm_deleted_at.sql  20251125103600_node_wg_drop_constraint_use_unique_index.sql  20251202145410_commit_metadata.sql  20251203135602_vm_commit_relations.sql  20251210134532_chelsea_schema.sql  (+36 more)
chelsea/scripts/: add-chelsea.sh  api-test.sh  billing-dev.sh  bootstrap-orch.tcl  build-release.sh  build-static-agent.sh  ceph-vm.sh  chelsea-docker-check.sh  chelsea-docker-run.sh  connect-m80.sh  convert-bootstrap-ini.sh  create-helm.sh  dotenv-migration.tcl  fetch-fcbin.sh  fetch-kernel.sh  install-hypervisors.sh  install-kernels.sh  make-release.sh  manage-dev-nodes.sh  metal-manager.sh  orchestrator-chelsea-test.sh  orchestrator-docker-check.sh  orchestrator-docker-run.sh  orchestrator-test.sh  release-production.sh  release-staging.sh  reset_chelsea_env.sh  run-integration-tests.sh  setup-certs.sh  setup_proxy_iam_permissions.sh  single-node.sh  smoke_test.sh  sync-m80.sh  test-images.sh  test-parallel.sh  test-proxy-routing.sh  test-tls-e2e.sh  test-wg-endpoints.tcl  unified-config.sh  upload_certs_to_secrets_manager.sh
chelsea/test_server/: README.md  index.ts  package.json
chelsea/tests/: HOWTO.md  all.eagle  api_extra.eagle  commit_tags.eagle  commits.eagle  domains.eagle  env_vars.eagle  exec.eagle  images.eagle  list_parent_commits.eagle  main.eagle  repositories.eagle  settings.eagle  validate.eagle
chelsea/tools/: buildDeploymentDatabase.eagle  deployToFileSystem.eagle
(+877 files in other folders)
