[workspace]
members = ["crates/*"]

resolver = "2"

# CI profile: release-like but optimized for compile speed.
# - opt-level 1: minimal optimizations (much faster than 3, enough for e2e tests)
# - debug line-tables: usable backtraces without full debuginfo bloat
# - incremental: faster rebuilds on self-hosted runners where target/ persists
[profile.ci]
inherits = "release"
opt-level = 1
debug = "line-tables-only"
incremental = true
