[package]
name = "agent_protocol"
version = "0.1.0"
edition = "2024"
description = "Shared protocol types for chelsea-agent ↔ host communication over vsock"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
base64 = "0.22"
