[package]
name = "alerting"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["now", "serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
uuid = "1.21.0"
vers_config = { path = "../vers_config" }
