[package]
name = "billing"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database (tokio-postgres + bb8 pool)
tokio-postgres = { version = "0.7", features = ["runtime", "with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13"
bb8 = "0.9"
bb8-postgres = "0.9"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
ring = "0.17"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for Stripe API)
reqwest = { version = "0.12", features = ["json"] }

# HTTP server (for webhook/billing route handlers)
axum = "0.8"


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Money
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Observability
tracing = "0.1"

# Utils
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
rust_decimal_macros = "1"
tower = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
