[package]
name = "boatswain"
version = "0.2.4"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["process", "rt", "macros", "fs", "rt-multi-thread"] }
tracing = "0.1.41"
util = { version = "0.1.0", path = "../util" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
