[package]
name = "ceph"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "process", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
util = { path = "../util" }
anyhow = "1.0.99"
tracing = "0.1.41"
regex = "1.11.2"
serde = "1.0.225"
utoipa = { version = "5.4.0", features = ["uuid"] }
vers_config = { path = "../vers_config" }
serde_json = "1.0.149"
