[package]
name = "cephalopod"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
nix = { version = "0.29", features = ["user"] }
serde_json = "1.0.149"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "rbd_ops"
harness = false

[[bench]]
name = "micro"
harness = false

[dependencies]
thiserror = "2.0.16"
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "sync", "process", "time", "macros", "fs"] }
serde = "1.0.225"
utoipa = { version = "5.4.0", features = ["uuid"] }
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0.99"
util = { path = "../util" }
vers_config = { path = "../vers_config" }
parking_lot = "0.12"
lru = "0.12"


