[package]
name = "chelsea-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chelsea-agent"
path = "src/main.rs"

[dependencies]
agent_protocol = { path = "../agent_protocol" }
tokio = { version = "1.47.1", features = ["full", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"

# vsock is only available on Linux
[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.5"
