[package]
name = "chelsea"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(orch_test)'] }

[dependencies]
orch_wg = { path = "../orch_wg" }
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
agent_protocol = { path = "../agent_protocol" }
base64 = "0.22"
chelsea_lib = { path = "../chelsea_lib" }
thiserror = "2.0.16"
util = { path = "../util" }
sysinfo = "0.37.0"
async-tempfile = "0.7.0"
chelsea_db = { path = "../chelsea_db" }
serde_json = "1.0.145"
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }
chelsea_server2 = { path = "../chelsea_server2" }
ssh-key = "0.6.7"
chelsea_vmevent_server = { path = "../chelsea_vmevent_server" }
timing_layer = { path = "../timing_layer" }
dashmap = "6.1.0"
vers_pg = { path = "../vers_pg" }
vers_config = { path = "../vers_config" }
mulberry = { path = "../mulberry" }

[features]
