[package]
name = "chelsea_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["io-util", "macros", "process", "sync"] }
sysinfo = "0.37.0"
thiserror = "2.0.16"
ipnet = "2.11.0"
macaddr = "1.0.1"
anyhow = "1.0.100"
util = { path = "../util" }
tracing = "0.1.41"
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }
ssh-key = { version = "0.6.7", features = ["ed25519", "rand_core"] }
futures = "0.3.31"
reqwest = { version = "0.13.2", features = ["json"] }
chrono = "0.4.42"
serde_json = "1.0.145"
serde = { version = "1.0.226", features = ["derive"] }
ceph = { path = "../ceph" }
nix = { version = "0.30.1", features = ["process", "signal"] }
nftables = { version = "0.6.3", features = ["tokio"] }
defguard_wireguard_rs = "0.7.8"
utoipa = "5.4.0"
vers_pg = { path = "../vers_pg" }
tokio-postgres = { version = "0.7.15" }
tempfile = "3.24.0"
vers_config = { path = "../vers_config" }
aws-sdk-s3 = "1.82.0"
agent_protocol = { path = "../agent_protocol" }

[dev-dependencies]
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["minio"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3"
chelsea_test = { path = "../chelsea_test" }
ssh-key = { version = "0.6", features = ["ed25519"] }
uuid = { version = "1", features = ["v4"] }
