[package]
name = "dto_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
chelsea_lib = { path = "../chelsea_lib" }
