[package]
name = "llm_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"

# HTTP client (for proxying to providers)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database (tokio-postgres + bb8 pool — same as proxy crate, avoids sqlx sqlite conflict)
tokio-postgres = { version = "0.7", features = ["runtime", "with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13"
bb8 = "0.9"
bb8-postgres = "0.9"
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Money
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Auth
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
subtle = "2.5"
pbkdf2 = "0.12"

# Credentials
secrecy = { version = "0.10", features = ["serde"] }

# Streaming
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Billing
billing = { path = "../billing" }

# Utils
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"

[dev-dependencies]
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres"] }
futures-util = "0.3"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "proxy_e2e"
harness = false
