[package]
name = "lvm"
version = "0.3.0"
edition = "2021"

[lib]
name = "lvm"

[dependencies]
dirs = "6.0.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["process"] }
util = { path = "../util" }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.15.0"
tracing-subscriber = "0.3"
ctor = "0.2"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
