[package]
name = "orch_test"
version = "0.1.0"
edition = "2021"

[features]
with-chelsea = []

[dependencies]
tokio = { version = "1", features = ["time"] }
orchestrator = { path = "../orchestrator", features = ["integration-tests"] }
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
futures-util = "0.3.31"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
axum = "0.8.6"
dto_lib = { path = "../dto_lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
mime = "0.3.17"
orch_wg = { version = "0.1.0", path = "../orch_wg" }
uuid = "1.18.1"
vers_config = { path = "../vers_config" }
vers_pg = { path = "../vers_pg" }