[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(enable_openapi)'] }

[features]

# Feature flags to expose test helpers for integration tests
integration-tests = []
with-chelsea = ["orch_test/with-chelsea"]

[dependencies]
orch_wg.path = "../orch_wg"
node_balancer.path = "../node_balancer"
axum = { version = "0.8.3", features = ["multipart"] }
dotenv = "0.15.0"
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream", "query"] }
serde = "1.0.217"
serde_json = "1.0.139"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "timeout", "compression-gzip"] }
tokio = { version = "1.43.0", features = ["sync", "rt-multi-thread", "fs", "signal"] }
tracing = "0.1.41"
tracing-appender = "0.2"
utoipa = { version = "5.3.1", features = ["yaml", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
thiserror = "2.0.15"
sha2 = "0.10"
pbkdf2 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1"
] }
dto_lib.path = "../dto_lib"
deadpool-postgres = "0.10"
native-tls = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"], default-features = false }
aws-config = "1.8.6"
base64 = "0.22.1"
defguard_wireguard_rs = "0.7.8"
x25519-dalek = "2.0.1"
futures-util = "0.3.31"
parking_lot = "0.12"
hex = "0.4.3"
jsonwebtoken = "9"
postgres-native-tls = "0.5.2"
vers_pg = { path = "../vers_pg" }
rand = "0.9.2"
url = "2.5.4"
futures = "0.3.31"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2"
workspace_build = { path = "../workspace_build" }
vers_config = { path = "../vers_config" }
util = { path = "../util" }
alerting = { path = "../alerting" }
billing = { path = "../billing" }
anyhow = "1.0.102"

[build-dependencies]
cfg_aliases = "0.2.1"

[dev-dependencies]
orch_test.path = "../orch_test"
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
