[package]
name = "updater-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
dotenvy = "0.15.7"
vers_config = { path = "../vers_config" }

[dev-dependencies]
tempfile = "3.8"
