[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
serde = { version = "1.0.218", features = ["serde_derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82.0"
futures = "0.3.31"
rand = "0.9.2"
thiserror = "2.0.12"
sha2 = "0.10.9"
sysinfo = "0.37.0"
ssh-key = { version = "0.6.7" }
tempfile = "3.9.0"
nix = { version = "0.30.1", features = ["feature", "mount", "user"] }


[dev-dependencies]
tempfile = "3.9.0"
mockall = "0.12.1"
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["minio"] }
tokio = { version = "1.43.0", features = ["full"] }
