[package]
name = "vers_acme"
version = "0.1.0"
edition = "2024"

[dependencies]
instant-acme = { version = "0.8.5", features = ["aws-lc-rs"] }
tokio = { version = "1.48", features = ["full"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rcgen = "0.13"
x509-parser = "0.16"
base64 = "0.22"
sha2 = "0.10"
tracing = "0.1.44"

[dev-dependencies]
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
