[package]
name = "vers_pg"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
postgres-native-tls = "0.5.2"
native-tls = "0.2.14"
vers_config = { path = "../vers_config" }
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
