[package]
name = "vers_s3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.82.0", features = ["behavior-version-latest"] }
futures = "0.3.31"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.9.0"
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["minio"] }
tokio = { version = "1.43.0", features = ["full"] }
